# libzbd

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  exports  libzbd.pc.in  libzbd.spec  libzbd.spec.in
debian/: README  changelog  control  copyright  libzbd-dev.install  libzbd.install  libzbd1.install  libzbd1.symbols  libzbd2.install  libzbd2.symbols  menu  not-installed  rules  watch
debian/tests/: control
debian/upstream/: metadata
debianbuild/: build.sh
include/libzbd/: zbd.h
lib/: Makefile.am  Makemodule.am  exports  libzbd.pc.in  zbd.c  zbd.h  zbd_utils.c
m4/: dontremove
rpmbuild/: libzbd.spec.in
tools/: Makefile.am
tools/cli/: Makefile.am  zbd.8  zbd.c  zbd.h  zbd_dump.c
tools/gui/: Makefile.am  gzbd.8  gzbd.c  gzbd.desktop.in  gzbd.h  gzbd_if.c  gzbd_if_dev.c  org.gnome.gzbd.policy.in
tools/gzbd/: Makemodule.am  gzbd.8  gzbd.c  gzbd.h  gzbd_if.c  gzbd_if_dev.c
tools/gzbd-viewer/: Makemodule.am  gzbd_viewer.c  gzbd_viewer.h  gzbd_viewer_if.c
tools/viewer/: Makefile.am  gzbd-viewer.8  gzbd-viewer.desktop.in  gzbd_viewer.c  gzbd_viewer.h  gzbd_viewer_if.c  org.gnome.gzbd-viewer.policy.in
tools/zbd/: Makemodule.am  zbd.8  zbd.c  zbd.h  zbd_dump.c
